--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "रामनगर ग्रामपंचायत, गडहिंग्लज",
-  "short_name": "रामनगर ग्राम...",
+  "name": "शिप्‍पुर तर्फ नेसरी ग्रामपंचायत, गडहिंग्लज",
+  "short_name": "शिप्‍पुर तर्...",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://basegp.bizc.in/assets/gp3379347.webp",
+      "src": "https://shipur-tarf-nesari.gadgp.in/assets/gp3379347.webp",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://basegp.bizc.in/assets/gp3379347.webp",
+      "src": "https://shipur-tarf-nesari.gadgp.in/assets/gp3379347.webp",
       "sizes": "512x512",
       "type": "image/png"
     }
